<resources>
    <string name="app_name">ContacTap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ContacTap</string>
    <string name="nav_header_subtitle">TODO(login)</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_contact_info">My Contact Info</string>
    <string name="menu_profiles">My Profiles</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_share">Share</string>
    <string name="menu_login">Login/Logout</string>

    <string name="ad_nfcTurnOn_pos">Turn on</string>
    <string name="ad_nfcTurnOn_neg">Dismiss</string>
    <string name="ad_nfcTurnOn_title">NFC is turned off.</string>
    <string name="ad_nfcTurnOn_message">You need turn on NFC module for scanning. Wish turn on it now?</string>
    <string name="tv_noNfc">There is no NFC module on this device</string>

    <string name="servicedesc">servicedesc</string>
    <string name="aiddescription">aiddescription</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_share_text">SHARE</string>

    <string name="title_activity_contact_info">ContactInfoActivity</string>
    <string name="contact_info_basic_title">Basic Info</string>
    <string name="contact_info_name_title">Name *</string>
    <string name="contact_info_name_title_">Name</string>
    <string name="contact_info_phone_title">Phone # *</string>
    <string name="contact_info_personal_email_title">Personal Email Address *</string>
    <string name="contact_info_personal_email_title_">Personal Email Address</string>
    <string name="contact_info_business_email_title">Business Email Address</string>
    <string name="contact_info_personal_phone_title">Personal Phone*</string>
    <string name="contact_info_personal_phone_title_">Personal Phone</string>
    <string name="contact_info_business_phone_title">Business Phone</string>
    <string name="contact_info_other_phone_title">Other Phone</string>
    <string name="contact_info_bio_title">Bio</string>
    <string name="contact_info_social_title">Social Media</string>
    <string name="contact_info_insta_title">Instagram</string>
    <string name="contact_info_snap_title">SnapChat</string>
    <string name="contact_info_twitter_title">Twitter</string>
    <string name="contact_info_linkedin_title">LinkedIn</string>
    <string name="contact_info_other_title">Other(s)</string>
    <string name="contact_info_hobbies_title">Hobbies</string>
    <string name="contact_info_otherinfo_title">Other Information</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contact_info_title_1_Welcome_to_ContacTap">Welcome to ContacTap!</string>
    <string name="contact_info_title_2_Welcome_to_ContacTap">Please enter your basic information to be shared to your new friends</string>

    <!-- ProfileList Strings -->
    <string name="profile_pic">Your Profile</string>
    <string name="profile_title">Profile</string>
    <string name="share_from_profile">Share</string>
    <string name="fab_content_description">fab</string>
    <string name="done_button_text">Done</string>
    <string name="add_profile">Add Profile</string>
    <string name="profile_name_edit_text">Profile Name</string>
    <string name="profile_description_edit_text">Description</string>
    <string name="share">Share the profile</string>
    <string name="done_button_title">Done</string>
    <string name="first_name_edit_text">First Name</string>
    <string name="last_name_edit_text">Last Name</string>

    <!-- ProfileList Strings -->
    <string name="contact_name">Your Contact</string>
    <string name="n_a">N/A</string>
    <string name="profile_image_title">Include the image in this profile</string>
    <string name="profile_upload_avatar">Please upload an avatar to your info</string>

    <!-- Login Strings -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_text">Google Sign-In</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="edit_your_info">My Info</string>
    <string name="fork">Fork</string>
    <string name="dialog_text">You need to log in using your Google account to create a profile. Do you want to log in?</string>
    <string name="dialog_login">Yes</string>
    <string name="dialog_cancel">I want to see how it works before I log in</string>

</resources>