<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.umich.yanfuguo.contactap.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_contact_info"
        android:name="edu.umich.yanfuguo.contactap.ui.ContactInfoActivity"
        android:label="@string/menu_contact_info"
        tools:layout="@layout/activity_contact_info" />

    <fragment
        android:id="@+id/nav_profiles"
        android:name="edu.umich.yanfuguo.contactap.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profiles"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="edu.umich.yanfuguo.contactap.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_slideshow" />

    <activity
        android:id="@+id/nav_share"
        android:name="edu.umich.yanfuguo.contactap.ui.ShareActivity"
        android:label="@string/menu_share"
        tools:layout="@layout/activity_share" />

</navigation>